--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/expression-language": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "6.4.*",
         "symfony/property-info": "6.4.*",
         "symfony/runtime": "6.4.*",
@@ -80,6 +81,9 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.56"
+        "symfony/debug-bundle": "6.4.*",
+        "symfony/maker-bundle": "^1.56",
+        "symfony/stopwatch": "6.4.*",
+        "symfony/web-profiler-bundle": "6.4.*"
     }
 }
