--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 /.idea
 
 ###> symfony/framework-bundle ###
@@ -16,9 +15,5 @@
 /public/build/
 npm-debug.log
 yarn-error.log
+/assets/vendor
 ###< symfony/webpack-encore-bundle ###
-
-###> symfony/asset-mapper ###
-/public/assets/
-/assets/vendor/
-###< symfony/asset-mapper ###
