--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@ npm-debug.log
 yarn-error.log
 /assets/vendor
 ###< symfony/webpack-encore-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
