--- a/composer.json
+++ b/composer.json
@@ -86,10 +86,16 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.5",
+        "mtdowling/jmespath.php": "^2.7",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.56",
+        "symfony/phpunit-bridge": "^7.0",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
+        "zenstruck/browser": "^1.8",
         "zenstruck/foundry": "^1.36"
     }
 }
