--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,9 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
+    role_hierarchy:
+        ROLE_FULL_USER: [ROLE_USER_EDIT, ROLE_TREASURE_CREATE, ROLE_TREASURE_EDIT]
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -24,6 +27,8 @@ security:
                 path: app_logout
             access_token:
                 token_handler: App\Security\ApiTokenHandler
+
+            stateless: false
 
             # if login only with token then put stateless:true to disable session login
 
